--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <li>
   <a href="reference/index.html">Functions</a>
 </li>
+<li>
+  <a href="news/index.html">News</a>
+</li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     Other Packages
