--- a/index.html
+++ b/index.html
@@ -109,13 +109,11 @@
   <div class="contents col-md-9">
     
 
-<p><br><br></p>
+<p><br></p>
 <div style="text-align:left">
 <br><a href="http://mc-stan.org">
-<img src="https://raw.githubusercontent.com/stan-dev/logos/master/logo.png" width="100" alt="Stan Logo"></a><h2>
-<strong>rstantools</strong>
+<img src="https://raw.githubusercontent.com/stan-dev/logos/master/logo_tm.png" width="100" alt="Stan Logo"></a><h2><strong>rstantools</strong></h2>
 <h4>Tools for developers of R packages interfacing with Stan</h4>
-</h2>
 </div>
 <p><br> The <strong>rstantools</strong> package provides various tools for developers of R packages interfacing with <a href="http://mc-stan.org">Stan</a>, including functions to set up the required package structure, S3 generic methods to unify function naming across Stan-based R packages, and vignettes with guidelines for developers.</p>
 <div id="getting-started" class="section level2">
@@ -126,7 +124,6 @@
 <li><p><a href="http://mc-stan.org/rstantools/articles/developer-guidelines.html">Guidelines for Developers of R Packages Interfacing with Stan</a></p></li>
 <li><p><a href="http://mc-stan.org/rstantools/articles/minimal-rstan-package.html">Step by step guide for creating a package that depends on RStan</a></p></li>
 </ul>
-<p><br></p>
 </div>
 <div id="installation" class="section level2">
 <h2 class="hasAnchor">
