--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
 <p><br></p>
 <div style="text-align:left">
-<br><a href="http://mc-stan.org">
+<br><span><a href="http://mc-stan.org">
 <img src="https://raw.githubusercontent.com/stan-dev/logos/master/logo_tm.png" width="100" alt="Stan Logo"></a><h2><strong>rstantools</strong></h2>
-<h4>Tools for developers of R packages interfacing with Stan</h4>
+<h4>Tools for developers of R packages interfacing with Stan</h4></span>
 </div>
 <p><br> The <strong>rstantools</strong> package provides various tools for developers of R packages interfacing with <a href="http://mc-stan.org">Stan</a>, including functions to set up the required package structure, S3 generic methods to unify function naming across Stan-based R packages, and vignettes with guidelines for developers.</p>
 <div id="getting-started" class="section level2">
