--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
     <li>
       <a href="http://mc-stan.org/loo">loo</a>
     </li>
+    <li>
+      <a href="http://mc-stan.org/projpred">projpred</a>
+    </li>
   </ul>
 </li>
 <li>
