--- a/LICENSE-text.html
+++ b/LICENSE-text.html
@@ -94,6 +94,9 @@
     <li>
       <a href="http://mc-stan.org/loo">loo</a>
     </li>
+    <li>
+      <a href="http://mc-stan.org/projpred">projpred</a>
+    </li>
   </ul>
 </li>
 <li>
