update rstantools website after release

--- a/404.html
+++ b/404.html
@@ -6,15 +6,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Generic functions for LOO predictions — loo-prediction • rstantools</title>
+<title>Page not found (404) • rstantools</title>
 
 <!-- favicons -->
-<link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../apple-touch-icon.png" />
-<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="../apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon" type="image/png" sizes="76x76" href="../apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon" type="image/png" sizes="60x60" href="../apple-touch-icon-60x60.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="https://mc-stan.org/rstantools/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://mc-stan.org/rstantools/favicon-32x32.png">
+<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="https://mc-stan.org/rstantools/apple-touch-icon.png" />
+<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="https://mc-stan.org/rstantools/apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon" type="image/png" sizes="76x76" href="https://mc-stan.org/rstantools/apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon" type="image/png" sizes="60x60" href="https://mc-stan.org/rstantools/apple-touch-icon-60x60.png" />
 
 <!-- jquery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -36,14 +36,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.4/jQuery.headroom.min.js" integrity="sha256-ZX/yNShbjqsohH1k95liqY9Gd8uOiE1S4vZc+9KQ1K4=" crossorigin="anonymous"></script>
 
 <!-- pkgdown -->
-<link href="../pkgdown.css" rel="stylesheet">
-<script src="../pkgdown.js"></script>
+<link href="https://mc-stan.org/rstantools/pkgdown.css" rel="stylesheet">
+<script src="https://mc-stan.org/rstantools/pkgdown.js"></script>
 
 
 
 
-<meta property="og:title" content="Generic functions for LOO predictions — loo-prediction" />
-<meta property="og:description" content="See the methods in the rstanarm package for examples." />
+<meta property="og:title" content="Page not found (404)" />
 <meta property="og:image" content="https://mc-stan.org/rstantools/logo.png" />
 <meta name="twitter:card" content="summary" />
 
@@ -64,7 +63,7 @@
   </head>
 
   <body>
-    <div class="container template-reference-topic">
+    <div class="container template-title-body">
       <header>
       <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
@@ -76,7 +75,7 @@
         <span class="icon-bar"></span>
       </button>
       <span class="navbar-brand">
-        <a class="navbar-link" href="../index.html">rstantools</a>
+        <a class="navbar-link" href="https://mc-stan.org/rstantools/index.html">rstantools</a>
         <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">2.0.0</span>
       </span>
     </div>
@@ -84,13 +83,13 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="../articles/index.html">Vignettes</a>
+  <a href="articles/index.html">Vignettes</a>
 </li>
 <li>
-  <a href="../reference/index.html">Functions</a>
+  <a href="reference/index.html">Functions</a>
 </li>
 <li>
-  <a href="../news/index.html">News</a>
+  <a href="news/index.html">News</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -153,88 +152,17 @@
       </header>
 
 <div class="row">
-  <div class="col-md-9 contents">
+  <div class="contents col-md-9">
     <div class="page-header">
-    <h1>Generic functions for LOO predictions</h1>
-    
-    <div class="hidden name"><code>loo-prediction.Rd</code></div>
+      <h1>Page not found (404)</h1>
     </div>
 
-    <div class="ref-description">
-    <p>See the methods in the <span class="pkg">rstanarm</span> package for examples.</p>
-    </div>
-
-    <pre class="usage"><span class='fu'>loo_linpred</span>(<span class='no'>object</span>, <span class='no'>...</span>)
-
-<span class='fu'>loo_predict</span>(<span class='no'>object</span>, <span class='no'>...</span>)
-
-<span class='fu'>loo_predictive_interval</span>(<span class='no'>object</span>, <span class='no'>...</span>)
-
-<span class='fu'>loo_pit</span>(<span class='no'>object</span>, <span class='no'>...</span>)
-
-<span class='co'># S3 method for default</span>
-<span class='fu'>loo_pit</span>(<span class='no'>object</span>, <span class='no'>y</span>, <span class='no'>lw</span>, <span class='no'>...</span>)</pre>
-
-    <h2 class="hasAnchor" id="arguments"><a class="anchor" href="#arguments"></a>Arguments</h2>
-    <table class="ref-arguments">
-    <colgroup><col class="name" /><col class="desc" /></colgroup>
-    <tr>
-      <th>object</th>
-      <td><p>The object to use.</p></td>
-    </tr>
-    <tr>
-      <th>...</th>
-      <td><p>Arguments passed to methods. See the methods in the <span class="pkg">rstanarm</span>
-package for examples.</p></td>
-    </tr>
-    <tr>
-      <th>y</th>
-      <td><p>For the default method of <code>loo_pit()</code>, a vector of <code>y</code> values the
-same length as the number of columns in the matrix used as <code>object</code>.</p></td>
-    </tr>
-    <tr>
-      <th>lw</th>
-      <td><p>For the default method of <code>loo_pit()</code>, a matrix of log-weights of
-the same length as the number of columns in the matrix used as <code>object</code>.</p></td>
-    </tr>
-    </table>
-
-    <h2 class="hasAnchor" id="value"><a class="anchor" href="#value"></a>Value</h2>
-
-    <p><code>loo_predict()</code>, <code>loo_linpred()</code>, and <code>loo_pit()</code>
-(probability integral transform) methods should return a vector with length
-equal to the number of observations in the data.
-<code>loo_predictive_interval()</code> methods should return a two-column matrix
-formatted in the same way as for <code><a href='predictive_interval.html'>predictive_interval()</a></code>.</p>
-    <h2 class="hasAnchor" id="see-also"><a class="anchor" href="#see-also"></a>See also</h2>
-
-    <div class='dont-index'>
-<ul>
-<li><p>The <span class="pkg">rstanarm</span> package (<a href='https://mc-stan.org/rstanarm/'>mc-stan.org/rstanarm</a>)
-for example methods
-(<a href='https://CRAN.R-project.org/package=rstanarm'>CRAN</a>,
-<a href='https://github.com/stan-dev/rstanarm'>GitHub</a>).</p></li>
-</ul>
-
-<ul>
-<li><p>Guidelines and recommendations for developers of <span style="R">R</span> packages
-interfacing with Stan and a demonstration getting a simple package working
-can be found in the vignettes included with <span class="pkg">rstantools</span> and at
-<a href='https://mc-stan.org/rstantools/articles/'>mc-stan.org/rstantools/articles</a>.</p></li>
-</ul>
-</div>
+Content not found. Please use links in the navbar.
 
   </div>
-  <div class="col-md-3 hidden-xs hidden-sm" id="sidebar">
-    <h2>Contents</h2>
-    <ul class="nav nav-pills nav-stacked">
-      <li><a href="#arguments">Arguments</a></li>
-      <li><a href="#value">Value</a></li>
-      <li><a href="#see-also">See also</a></li>
-    </ul>
 
-  </div>
 </div>
+
 
 
       <footer>
