--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       <a href="https://mc-stan.org/rstan">rstan</a>
     </li>
     <li>
+      <a href="https://mc-stan.org/cmdstanr">cmdstanr</a>
+    </li>
+    <li>
       <a href="https://mc-stan.org/rstanarm">rstanarm</a>
     </li>
     <li>
@@ -163,6 +166,8 @@
 </li>
 <li>Ask a question at <br><a href="https://discourse.mc-stan.org/">https://​discourse.mc-stan.org/​</a>
 </li>
+<li>Browse source code at <br><a href="https://github.com/stan-dev/rstantools">https://​github.com/​stan-dev/​rstantools</a>
+</li>
 </ul>
 </div>
 <div class="license">
@@ -184,8 +189,9 @@
   <div class="dev-status">
 <h2>Dev status</h2>
 <ul class="list-unstyled">
+<li><a href="https://cran.r-project.org/web/packages/rstantools"><img src="https://www.r-pkg.org/badges/version/rstantools?color=blue" alt="CRAN_Status_Badge"></a></li>
 <li><a href="https://travis-ci.org/stan-dev/rstantools"><img src="https://travis-ci.org/stan-dev/rstantools.svg?branch=master" alt="Travis-CI Build Status"></a></li>
-<li><a href="http://cran.r-project.org/web/packages/rstantools"><img src="http://www.r-pkg.org/badges/version/rstantools?color=blue" alt="CRAN_Status_Badge"></a></li>
+<li><a href="https://cran.rstudio.com/package=rstantools"><img src="https://cranlogs.r-pkg.org/badges/rstantools?color=blue" alt="Downloads"></a></li>
 </ul>
 </div>
 </div>
